--- a/app/views/shared/_nav_bar.html.haml
+++ b/app/views/shared/_nav_bar.html.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      =link_to "Auction", root_path, class: "navbar-brand"
+      =link_to "Auction App", root_path, class: "navbar-brand"
 
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav
