--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -8,3 +8,6 @@
       = link_to 'Edit', edit_product_path(@product), class: 'btn btn-default'
       \|
       = link_to 'Back', products_path, class: 'btn btn-primary'
+
+    = render 'auction'
+    = render 'bid'
