Implementing WebSockets for the Client

--- a/app/views/products/_bid.html.haml
+++ b/app/views/products/_bid.html.haml
@@ -19,3 +19,14 @@
     .form-group
       =f.text_field :value, class: 'form-control'
     =f.button 'Create Bid', class: 'btn btn-default'
+
+  :javascript
+    $(function(){
+      var user_id = #{current_user.id};
+      var auction_id = #{@product.auction.id};
+      var form = $("#new_bid");
+
+      var auctionSocket = new AuctionSocket(
+        user_id, auction_id, form
+      );
+    })
