--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -11,3 +11,8 @@
 
     = render 'auction'
     = render 'bid'
+
+:javascript
+  App = {
+    websocket_url: "ws://#{request.host}:#{request.port}/"
+  };
